[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sattosan <sato.yuya1211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
